fixed home page on mobile view, emoved margin on intro div and increased margin on display view

--- a/my-portfolio/src/CSS/Home.css
+++ b/my-portfolio/src/CSS/Home.css
@@ -35,14 +35,14 @@
 }
 
 @media only screen and (max-width: 700px) {
-  .intro {
+  /* .intro {
     margin-top: 68%;
-  }
+  } */
 
   .displayIntro {
     display: flex;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 60%;
   }
 
   .bio {
